k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapp
  labels:
    app: userapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userapp
  template:
    metadata:
      labels:
        app: userapp
    spec:
      containers:
      - name: userapp
        image: cerebro31/userapp:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
