k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapp
spec:
  selector:
    app: userapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
